<resources>
    <string name="app_name">iStudy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Parolă</string>
    <string name="action_sign_in">Intră în aplicație</string>
    <string name="action_sign_in_short">Logare</string>
    <string name="error_invalid_email">Adresa invalidă </string>
    <string name="error_invalid_password">Parola prea scurtă</string>
    <string name="error_incorrect_password">Parola greșită</string>
    <string name="error_field_required">Acest câmp este obligatoriu</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="exemplu">Exemplu</string>
    <string name="nume_materie">Nume materie</string>
    <string name="nume_profesor">Profesor</string>
    <string name="numar_credite">Numar\ncredite</string>
    <string name="punctaj_curs">Punctaj\ncurs</string>
    <string name="punctaj_proiect">Punctaj\nproiect</string>
    <string name="punctaj_laborator">Punctaj\nlaborator</string>
    <string name="punctaj_seminar">Punctaj\nseminar</string>
    <string name="contact">Contact</string>
    <string name="birou">Birou</string>
    <string name="nume">Nume</string>
    <string name="adresa_email">E-mail</string>
    <string name="detalii_materie">Detalii materie</string>
    <string name="buton_contact">Ai uitat userul sau parola?</string>
    <string name="nume_utilizator">Introduceti numele</string>
    <string name="actualizeaza">Actualizeaza</string>
    <string name="log_out">Log out</string>
    <string name="contactEchipa">Pentru orice fel de probleme cu aplicatia sau nelamuriri, ne puteti contacta la adresa: office@istudy.ro"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="login_error_404">Nu exista niciun user cu acest email</string>
    <string name="login_error_403">Email sau parola gresita \nIncearca din nou</string>
    <string name="generic_alert_dialog_title">Oops!</string>
    <string name="alert_dialog_positive_button">OK</string>
    <string name="login_error_fatal">Ceva n-a mers tocmai cum trebuie</string>
    <string name="materie_detalii_progress_dialog_title">Descarcam informatiile</string>
    <string name="materie_detalii_progress_dialog_message">Se obtin informatiile pentru materie!\nTe rugam sa astepti!</string>
    <string name="nu_sunt_disponibile">Informatii indisponibile</string>


    <string name="setari_hello">Buna, %1$s!</string>
    <string name="resetare_parola">Resetare Parola</string>
    <string name="generic_curs">Curs</string>
    <string name="generic_laborator">Laborator</string>
    <string name="generic_proiect">Proiect</string>
    <string name="generic_seminar">Seminar</string>
    <string name="title_activity_resetare_parola">ResetareParolaActivity</string>
    <string name="err_camp_obligatoriu">Camp obligatoriu!</string>
    <string name="err_pass_to_short">Parola trebuie sa aiba minim 6 caractere!</string>
    <string name="err_pass_no_numbers">Parola trebuie sa contina minim o cifra!</string>
    <string name="confirma_parola_noua">Confirma parola noua:</string>
    <string name="parola_noua">Parola noua:</string>
    <string name="parola_curenta">Parola curenta:</string>
    <string name="resetrae_pass_ok_200">Resetare parola finalizata cu succes!</string>
    <string name="reset_user_nu_exista_404">Userul nu exista!</string>
    <string name="parola_curenta_not_ok_403">Parola curenta nu este buna!</string>
    <string name="pass_err_parola_noua_aceeas_parola_curenta">Parola noua nu poate fi identica cu cea curenta!</string>
    <string name="title_activity_notificare">NotificareActivity</string>

</resources>
