<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/setariTitlu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Setari"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/red"
        style="?android:attr/listSeparatorTextViewStyle"/>
    <View
        android:id="@+id/viewSpatiere"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:padding="5dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/setariTitlu">
    </View>

<LinearLayout
    android:id="@+id/numeUser"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/viewSpatiere"
    android:orientation="horizontal"
    android:layout_centerInParent="true"
    >
    <EditText
        android:id="@+id/numeUserIntrodus"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:hint="@string/nume_utilizator"
        android:padding="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"


        />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:text="@string/actualizeaza"
        android:textSize="14sp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/rounded_primary_color_background"
        />
</LinearLayout>

    <Button
        android:id="@+id/butonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/log_out"
        android:layout_below="@id/numeUser"
        android:background="@drawable/rounded_primary_color_background"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/semnalareProblema"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:id="@+id/semnalareProblemaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/contactEchipa"
            android:layout_marginLeft="10dp"
            />

        <Button
            android:id="@+id/butonContactEchipa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/contact"
            android:background="@drawable/rounded_primary_color_background"
            android:textStyle="bold"
            />




    </LinearLayout>





</RelativeLayout>