<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="ro.horiacalin.istud.PresentationLayer.Controller.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <ImageView
                android:id="@+id/logoEtti"
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_etti"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textImpulLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logoEtti"
                android:layout_marginTop="75dp"
                android:layout_margin="14dp">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
               />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textImputLayoutPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:layout_below="@+id/textImpulLayoutEmail">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_below="@+id/textImputLayoutPass"
                android:layout_centerHorizontal="true"
                android:background="@color/red"
                android:padding="10dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/no_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/buton_contact"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_below="@+id/email_sign_in_button"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:textColor="@color/grey"
                android:onClick="trimiteEmailAdmin"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

